objects/FLODocs__Clean_up_Rule_Relation__c.object
<CustomObject>
    <fields>
        <fullName>FLODocs__Customization__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Customization</label>
        <referenceTo>FLODocs__FLO_Customization__c</referenceTo>
        <relationshipLabel>Clean up Rule Relations</relationshipLabel>
        <relationshipName>Clean_up_Rule_Relations</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>FLODocs__Retain__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Retain</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>FLODocs__Search_Clean_up_Rule__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Search Clean-up Rule</label>
        <referenceTo>FLODocs__Search_Clean_up_Rule__c</referenceTo>
        <relationshipLabel>Clean up Rule Relations</relationshipLabel>
        <relationshipName>Clean_up_Rule_Relations</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Clean up Rule Relation</label>
    <nameField>
        <displayFormat>CRR-{0000}</displayFormat>
        <label>Clean up Rule Relation Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Clean up Rule Relations</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>